--- a/build.xml
+++ b/build.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" ?>
 <project name="ComplexWiring" default="build">
 
-    <property name="build.dir.dev" value="../../"/>
-    <property name="build.dir.release" value="releases"/>
-    <property name="build.release.mcversion" value="1.5.2"/>
+    <property name="build.dir.dev" value="..\"/>
+    <property name="build.dir.release" value="..\out"/>
+    <property name="build.release.mcversion" value="1.6.4"/>
     <property name="build.release.mod.version" value="0.0.0"/>
 
     <target name="clean">
-        <delete file="${build.dir.dev}\mcp\src\minecraft\mcmod.info"/>
-        <delete dir="${build.dir.dev}\mcp\src\minecraft\num"/>
+        <delete file="${build.dir.dev}\forge\mcp\src\minecraft\mcmod.info"/>
+        <delete dir="${build.dir.dev}\forge\mcp\src\minecraft\num"/>
         <delete dir="${build.dir.dev}\eclipse\Minecraft\bin\num"/>
-        <delete dir="${build.dir.dev}\mcp\reobf\minecraft"/>
+        <delete dir="${build.dir.dev}\forge\mcp\reobf\minecraft"/>
     </target>
 
     <target name="prep">
-        <copy todir="${build.dir.dev}\mcp\src\minecraft">
-            <fileset dir="${build.dir.dev}\src\ComplexWiring\common"/>
+        <copy todir="${build.dir.dev}\forge\mcp\src\minecraft">
+            <fileset dir="${build.dir.dev}\ComplexWiring\common"/>
         </copy>
     </target>
 
     <target name="recompile">
-        <exec dir="${build.dir.dev}\mcp" executable="cmd" osfamily="windows">
+        <exec dir="${build.dir.dev}\forge\mcp" executable="cmd" osfamily="windows">
             <arg line="/c recompile.bat"/>
         </exec>
-        <exec dir="${build.dir.dev}\mcp" executable="bash" osfamily="unix">
+        <exec dir="${build.dir.dev}\forge\mcp" executable="bash" osfamily="unix">
             <arg line="recompile.sh"/>
         </exec>
     </target>
 
     <target name="reobfuscate">
-        <exec dir="${build.dir.dev}\mcp" executable="cmd" osfamily="windows">
+        <exec dir="${build.dir.dev}\forge\mcp" executable="cmd" osfamily="windows">
             <arg line="/c reobfuscate_srg.bat"/>
         </exec>
-        <exec dir="${build.dir.dev}\mcp" executable="bash" osfamily="unix">
+        <exec dir="${build.dir.dev}\forge\mcp" executable="bash" osfamily="unix">
             <arg line="reobfuscate_srg.sh"/>
         </exec>
     </target>
@@ -46,10 +46,10 @@
 
         <!-- Build the jar -->
         <mkdir dir="${build.dir.release}"/>
-        <jar destfile="${build.dir.dev}\${build.dir.release}\ComplexWiring-${build.release.mcversion}-${build.release.mod.version}.jar">
-            <fileset dir="${build.dir.dev}\mcp\src\minecraft\" includes="mcmod.info"/>
-            <fileset dir="${build.dir.dev}\mcp\reobf\minecraft"/>
-            <fileset dir="${build.dir.dev}\src\ComplexWiring\resources"/>
+        <jar destfile="${build.dir.release}\ComplexWiring-${build.release.mcversion}-${build.release.mod.version}.jar">
+            <fileset dir="${build.dir.dev}\forge\mcp\src\minecraft\" includes="mcmod.info"/>
+            <fileset dir="${build.dir.dev}\forge\mcp\reobf\minecraft"/>
+            <fileset dir="${build.dir.dev}\ComplexWiring\resources"/>
         </jar>
 
         <!-- Clean up the MCP source now that we are done -->
